Add p in index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Cześć</h1>
     <p>To moje pierwsze repo! 😎</p>
+    <p>Zapomniałem że ma być po eng pisane :O.</p>
 </body>
 
 </html>
