Added new idead

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <p>To moje pierwsze repo! 😎</p>
-    <p>Zapomniałem że ma być po eng pisane :O.</p>
+    <p>Zapomniałem że ma być po eng pisane :O.git </p>
+
+    <p>Nowy Brench.</p>
 </body>
 
 </html>
